force-app/main/default/objects/OCE__BusinessToDo__c/OCE__BusinessToDo__c.object-meta.xml
<CustomObject>
    <description>Connected ToDos to the Business Template.</description>
    <label>Business ToDo</label>
    <nameField>
        <label>Business To-Do Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business ToDos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>