force-app/main/default/objects/OCE__BusinessToDo__c/fields/OCE__BusinessObjectiveProductIds__c.field-meta.xml
<CustomField>
    <fullName>OCE__BusinessObjectiveProductIds__c</fullName>
    <description>Text field with all Products attached to parent Business Objective via Business Objective Product objects. Updated by trigger on Business Objective Product.</description>
    <inlineHelpText>Text field with all Products attached to parent Business Objective via Business Objective Product objects. Updated by trigger on Business Objective Product.</inlineHelpText>
    <label>Business Objective Product Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>