force-app/main/default/objects/OCE__BusinessToDo__c/fields/OCE__BusinessTactic__c.field-meta.xml
<CustomField>
    <fullName>OCE__BusinessTactic__c</fullName>
    <description>Link to parent Business Tactics.</description>
    <label>Tactic</label>
    <referenceTo>OCE__BusinessTactic__c</referenceTo>
    <relationshipLabel>Business To-Dos</relationshipLabel>
    <relationshipName>BusinessToDos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>