force-app/main/default/objects/OCE__BusinessToDo__c/fields/OCE__EndDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__EndDate__c</fullName>
    <description>End of duration for Business Todos.</description>
    <label>End On</label>
    <type>Date</type>
</CustomField>