force-app/main/default/objects/OCE__BusinessToDo__c/fields/OCE__StartDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__StartDate__c</fullName>
    <description>Start of duration for Business Tactics.</description>
    <label>Start On</label>
    <type>Date</type>
</CustomField>