force-app/main/default/objects/OCE__BusinessToDo__c/validationRules/OCE__Pending_Or_Approved_Change_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__Pending_Or_Approved_Change_Not_Allowed</fullName>
    <active>false</active>
    <description>If Business Objective Approved Status is Pending or Approved - Business ToDo cannot be changed</description>
    <errorConditionFormula>AND(NOT(ISNEW()), OR(ISPICKVAL(OCE__BusinessTactic__r.OCE__BusinessObjective__r.OCE__ApproverStatus__c,&apos;Pending Approval&apos;),ISPICKVAL(OCE__BusinessTactic__r.OCE__BusinessObjective__r.OCE__ApproverStatus__c, &apos;Approved&apos;)))</errorConditionFormula>
    <errorMessage>Business ToDo cannot be changed when Business Objective Approved Status is Pending or Approved</errorMessage>
</ValidationRule>